// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for UsaBanner component English banner 1`] = `
<div>
  <section
    aria-label="Official government website"
    class="usa-banner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header"
      >
        <div
          class="usa-banner__inner"
        >
          <div
            class="grid-col-auto"
          >
            <img
              alt="U.S. flag"
              class="usa-banner__header-flag"
              src="/assets/img/us_flag_small.png"
            />
          </div>
          <div
            class="grid-col-fill tablet:grid-col-auto"
          >
            <p
              class="usa-banner__header-text"
            >
              An official website of the United States government
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Here's how you know
            </p>
          </div>
          <button
            aria-controls="gov-banner-default-default"
            aria-expanded="false"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Here's how you know
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        hidden=""
        id="gov-banner-default-default"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-dot-gov.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Official websites use .gov
                </strong>
                <br />
                A 
                <strong>
                  .gov
                </strong>
                 website belongs to an official government organization in the United States.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-https.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Secure .gov websites use HTTPS
                </strong>
                <br />
                A 
                <strong>
                  lock
                </strong>
                 (
                <span
                  class="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-title-default banner-lock-description-default"
                    class="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title-default"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description-default"
                    >
                      A locked padlock
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fill-rule="evenodd"
                    />
                  </svg>
                   
                </span>
                ) or 
                <strong>
                  https://
                </strong>
                 means you've safely connected to the .gov website. Share sensitive information only on official, secure websites.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Snapshot tests for UsaBanner component English banner 2`] = `
<div>
  <section
    aria-label="Official government website"
    class="usa-banner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header usa-banner__header--expanded"
      >
        <div
          class="usa-banner__inner"
        >
          <div
            class="grid-col-auto"
          >
            <img
              alt="U.S. flag"
              class="usa-banner__header-flag"
              src="/assets/img/us_flag_small.png"
            />
          </div>
          <div
            class="grid-col-fill tablet:grid-col-auto"
          >
            <p
              class="usa-banner__header-text"
            >
              An official website of the United States government
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Here's how you know
            </p>
          </div>
          <button
            aria-controls="gov-banner-default-default"
            aria-expanded="true"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Here's how you know
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        id="gov-banner-default-default"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-dot-gov.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Official websites use .gov
                </strong>
                <br />
                A 
                <strong>
                  .gov
                </strong>
                 website belongs to an official government organization in the United States.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-https.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Secure .gov websites use HTTPS
                </strong>
                <br />
                A 
                <strong>
                  lock
                </strong>
                 (
                <span
                  class="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-title-default banner-lock-description-default"
                    class="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title-default"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description-default"
                    >
                      A locked padlock
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fill-rule="evenodd"
                    />
                  </svg>
                   
                </span>
                ) or 
                <strong>
                  https://
                </strong>
                 means you've safely connected to the .gov website. Share sensitive information only on official, secure websites.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Snapshot tests for UsaBanner component Spanish banner 1`] = `
<div>
  <section
    aria-label="Un sitio oficial del Gobierno de Estados Unidos"
    class="usa-banner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header"
      >
        <div
          class="usa-banner__inner"
        >
          <div
            class="grid-col-auto"
          >
            <img
              alt="U.S. flag"
              class="usa-banner__header-flag"
              src="/assets/img/us_flag_small.png"
            />
          </div>
          <div
            class="grid-col-fill tablet:grid-col-auto"
          >
            <p
              class="usa-banner__header-text"
            >
              Un sitio oficial del Gobierno de Estados Unidos
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Así es como usted puede verificarlo
            </p>
          </div>
          <button
            aria-controls="gov-banner-spanish-lang-es"
            aria-expanded="false"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Así es como usted puede verificarlo
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        hidden=""
        id="gov-banner-spanish-lang-es"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-dot-gov.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Los sitios web oficiales usan .gov
                </strong>
                <br />
                Un sitio web 
                <strong>
                  .gov
                </strong>
                 pertenece a una organización oficial del Gobierno de Estados Unidos.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-https.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Los sitios web seguros .gov usan HTTPS
                </strong>
                <br />
                Un 
                <strong>
                  candado
                </strong>
                 (
                <span
                  class="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-title-spanish banner-lock-description-spanish"
                    class="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title-spanish"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description-spanish"
                    >
                      A locked padlock
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fill-rule="evenodd"
                    />
                  </svg>
                   
                </span>
                ) o 
                <strong>
                  https://
                </strong>
                 significa que usted se conectó de forma segura a un sitio web .gov. Comparta información sensible sólo en sitios web oficiales y seguros.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Snapshot tests for UsaBanner component Spanish banner 2`] = `
<div>
  <section
    aria-label="Un sitio oficial del Gobierno de Estados Unidos"
    class="usa-banner"
  >
    <div
      class="usa-accordion"
    >
      <header
        class="usa-banner__header usa-banner__header--expanded"
      >
        <div
          class="usa-banner__inner"
        >
          <div
            class="grid-col-auto"
          >
            <img
              alt="U.S. flag"
              class="usa-banner__header-flag"
              src="/assets/img/us_flag_small.png"
            />
          </div>
          <div
            class="grid-col-fill tablet:grid-col-auto"
          >
            <p
              class="usa-banner__header-text"
            >
              Un sitio oficial del Gobierno de Estados Unidos
            </p>
            <p
              aria-hidden="true"
              class="usa-banner__header-action"
            >
              Así es como usted puede verificarlo
            </p>
          </div>
          <button
            aria-controls="gov-banner-spanish-lang-es"
            aria-expanded="true"
            class="usa-accordion__button usa-banner__button"
            type="button"
          >
            <span
              class="usa-banner__button-text"
            >
              Así es como usted puede verificarlo
            </span>
          </button>
        </div>
      </header>
      <div
        class="usa-banner__content usa-accordion__content"
        id="gov-banner-spanish-lang-es"
      >
        <div
          class="grid-row grid-gap-lg"
        >
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-dot-gov.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Los sitios web oficiales usan .gov
                </strong>
                <br />
                Un sitio web 
                <strong>
                  .gov
                </strong>
                 pertenece a una organización oficial del Gobierno de Estados Unidos.
              </p>
            </div>
          </div>
          <div
            class="usa-banner__guidance tablet:grid-col-6"
          >
            <img
              alt=""
              aria-hidden="true"
              class="usa-banner__icon usa-media-block__img"
              role="img"
              src="/assets/img/icon-https.svg"
            />
            <div
              class="usa-media-block__body"
            >
              <p>
                <strong>
                  Los sitios web seguros .gov usan HTTPS
                </strong>
                <br />
                Un 
                <strong>
                  candado
                </strong>
                 (
                <span
                  class="icon-lock"
                >
                  <svg
                    aria-labelledby="banner-lock-title-spanish banner-lock-description-spanish"
                    class="usa-banner__lock-image"
                    focusable="false"
                    height="64"
                    role="img"
                    viewBox="0 0 52 64"
                    width="52"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title
                      id="banner-lock-title-spanish"
                    >
                      Lock
                    </title>
                    <desc
                      id="banner-lock-description-spanish"
                    >
                      A locked padlock
                    </desc>
                    <path
                      d="M26 0c10.493 0 19 8.507 19 19v9h3a4 4 0 0 1 4 4v28a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V32a4 4 0 0 1 4-4h3v-9C7 8.507 15.507 0 26 0zm0 8c-5.979 0-10.843 4.77-10.996 10.712L15 19v9h22v-9c0-6.075-4.925-11-11-11z"
                      fill="#000000"
                      fill-rule="evenodd"
                    />
                  </svg>
                   
                </span>
                ) o 
                <strong>
                  https://
                </strong>
                 significa que usted se conectó de forma segura a un sitio web .gov. Comparta información sensible sólo en sitios web oficiales y seguros.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
